test/testdata/webhooks/validating-webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: cosmopilot-validating-webhook-cfg
webhooks:
  - clientConfig:
      service:
        name: cosmopilot-webhook
        namespace: cosmopilot-system
        path: /validate-cosmopilot-voluzi-com-v1-chainnode
    failurePolicy: Fail
    matchPolicy: Exact
    sideEffects: None
    admissionReviewVersions: ["v1"]
    name: vchainnode.kb.io
    rules:
      - apiGroups:
          - cosmopilot.voluzi.com
        apiVersions:
          - v1
        operations:
          - CREATE
          - UPDATE
        resources:
          - chainnodes
  - clientConfig:
      service:
        name: cosmopilot-webhook
        namespace: cosmopilot-system
        path: /validate-cosmopilot-voluzi-com-v1-chainnodeset
    failurePolicy: Fail
    matchPolicy: Exact
    sideEffects: None
    admissionReviewVersions: ["v1"]
    name: vchainnodeset.kb.io
    rules:
      - apiGroups:
          - cosmopilot.voluzi.com
        apiVersions:
          - v1
        operations:
          - CREATE
          - UPDATE
        resources:
          - chainnodesets
